@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [mms] Fix vacation in the maildrop driver (Bug #13415; balestrieri@mag-data.com).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1490,7 +1490,7 @@
    <date>2014-07-08</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [mms] Fix vacation in the maildrop driver (Bug #13415; balestrieri@mag-data.com).
    </notes>
   </release>
  </changelog>
